--- a/public/responsive.css
+++ b/public/responsive.css
@@ -9,11 +9,23 @@
     .wallet-holder{
         width: 100%
     }
+    /* market data modal styling*/
+    .market-data>h2{
+        font-size: large;
+    }
+    .market-data{
+        width: 45%;
+    }
 }
 @media screen and (max-width: 1050px){
 
     nav{
-        height: 60px !important
+        height: 50px     !important
+    }
+    #nav{
+        height:50px !important;
+        padding-top: .5% !important;
+        padding-bottom: .5% !important
     }
     .disappear-m{
         display: none;
@@ -27,6 +39,12 @@
     .mobile-tab{
         width: auto;
         height:auto;
+    }
+    .head-pad{
+        height:50px !important  
+    }
+    .absolute.menu-tabs{
+        top:61px !important ;
     }
     .absolute{
         position: absolute;
@@ -48,7 +66,6 @@
         width: 40%;
         background-color:var(--deemed-black);
         height: 300px;
-        top:79px;
         right: 0%;
         backdrop-filter: blur(7px)
     }
@@ -87,15 +104,22 @@
     
 }
 @media screen and (max-width: 980px){
-.home-wallet{
-    width:78%
-}
-.home-wallet .wallet img{
-    width: 30px
-}
-.home-wallet .wallet span{
-    margin-left: 6%
-}
+    .home-wallet{
+        width:78%
+    }
+    .home-wallet .wallet img{
+        width: 30px
+    }
+    .home-wallet .wallet span{
+        margin-left: 6%
+    }
+     /* market data modal styling*/
+    .market-data>h2{
+        font-size: large;
+    }
+    .market-data{
+        width: 50%;
+    }
     
 }
 @media screen and (max-width:900px){
@@ -119,8 +143,14 @@
         width: 41% !important;
         margin: 1.5%;
     }
+    .market-data>div>p{
+        font-size: x-small !important;
+    }
 }
 @media screen and (max-width: 820px){
+    .absolute.menu-tabs{
+        top: 59px !important
+    }
     .no-bet{
         width: 90%
     }
@@ -136,13 +166,17 @@
     .wallet-collection,.wallet-container>p{
         width: 85% !important
     }
+    .market-data .prediction-summarry{
+       min-width: 95%
+    }
+}
+@media screen and (max-width: 800px){
+    .absolute.menu-tabs{
+        top: 58px !important
+    }
 }
 @media screen and (max-width:700px){
     /*Navigation styling for small screens*/
-    #nav{
-        height:50px !important;
-        padding-top: 1% !important
-    }
     .container{
         width: 90%;
         padding: 2% 5%;
@@ -151,7 +185,7 @@
         height:50px
     }
     .absolute.menu-tabs{
-        top:57px
+        top:56px
     }
     .quick-nav-actions{
         width: 50%
@@ -186,7 +220,7 @@
         height: 40px !important;
     }
     .menu-tabs{
-        width: 60% !important;
+        width: 65% !important;
     }
     .menu-tabs>a{
         text-indent: 20px
@@ -218,6 +252,10 @@
     h1,.wallet-container>h1{
         font-size: larger !important    
     }
+    .headline span{
+        font-size: medium !important;
+        font-weight: bolder
+    }
     button,.wallet-collection>button{
         padding:3% 0px;
         font-size: medium
@@ -245,6 +283,9 @@
     .explore-n-learn{
         width: 70%
     }
+    .market-data{
+        width: 70%
+    }
 }
 @media screen and (max-width:540px){
     /* Navigation styling for small screens*/
@@ -254,7 +295,8 @@
         border-width:2px;
     }
     .menu-tabs{
-        top:54px !important
+        top:54px !important;
+        width: 85% !important
     }
     /*home styling*/
 
@@ -276,11 +318,13 @@
         width:95% !important;
     }
     .market-tags{
-        padding-left:3%
-    }
-    .market-tags{
+        padding-left:3%;
         margin: 2% 0%;
         width:95%;
+    }
+    button,.wallet-collection>button{
+        padding:3% 0px;
+        font-size: small
     }
 
     .search-area>.search-bar{
@@ -293,6 +337,9 @@
         height: 25px;
         font-size: smaller
     }
+    .market-data{
+        width: 85% !important;
+    }
 }
 @media screen and (max-width:400px){
     .search-area>.search-bar{
@@ -304,6 +351,9 @@
         width: 96%;
         padding: 2% 1.5%;
     }
+    .market-data{
+        width: 90% !important;
+    }
 }
 
 @media screen and (max-width:340px){
@@ -312,7 +362,7 @@
         padding:1%
     }
     .menu-tabs{
-        width:85% !important;
+        width:95% !important;
         top:53px !important  
     }
     .card{
