--- a/public/main.css
+++ b/public/main.css
@@ -16,7 +16,7 @@
     --very-faint-yellow:rgb(85, 85, 43);
     --dark-overlay:rgba(5, 11, 20, 0.65);
     --blue-gray:#515179;
-    --faint-blue-gray:#515179a1;
+    --faint-blue-gray:#282840;
 }
 *{
     transition-duration: 300ms
@@ -149,6 +149,10 @@ div#nav a.router-link-exact-active {
 .logo>a{
     border-bottom: 0px solid #00000000 !important;
 }
+.logo>img{
+    width: 100%;
+    height: 100%;
+}
 .container{
     width: 96%;
     height: auto;
@@ -158,6 +162,11 @@ div#nav a.router-link-exact-active {
     width: 100%;
     padding: .5%;
     margin-top: 2%;
+}
+.flat-box{
+    width: 96%;
+    height: auto;
+    padding:0% 2%
 }
 /*menu tab stylings*/
 .menu-tabs{
@@ -586,6 +595,7 @@ font-size: medium
 }
 .btn-container>h4{
     margin-left: 1%;
+    font-weight: 100;
 }
 .play-guides{
     text-align: center
